@@ -15,7 +15,7 @@ final class EmptyStringEngine implements \Random\Engine {
 final class HeavilyBiasedEngine implements \Random\Engine {
     public function generate(): string
     {
-        return "\xff\xff\xff\xff\xff\xff\xff\xff";
+        return \str_repeat("\xff", PHP_INT_SIZE);
     }
 }
 
@@ -32,25 +32,33 @@ foreach ([
     } catch (Throwable $e) {
         echo $e, PHP_EOL;
     }
-    
+
     echo PHP_EOL, "-------", PHP_EOL, PHP_EOL;
-    
+
+    try {
+        var_dump((new Randomizer(new $engine()))->nextInt());
+    } catch (Throwable $e) {
+        echo $e, PHP_EOL;
+    }
+
+    echo PHP_EOL, "-------", PHP_EOL, PHP_EOL;
+
     try {
         var_dump(bin2hex((new Randomizer(new $engine()))->getBytes(1)));
     } catch (Throwable $e) {
         echo $e, PHP_EOL;
     }
-    
+
     echo PHP_EOL, "-------", PHP_EOL, PHP_EOL;
-    
+
     try {
         var_dump((new Randomizer(new $engine()))->shuffleArray(\range(1, 10)));
     } catch (Throwable $e) {
         echo $e, PHP_EOL;
     }
-    
+
     echo PHP_EOL, "-------", PHP_EOL, PHP_EOL;
-    
+
     try {
         var_dump((new Randomizer(new $engine()))->shuffleBytes('foobar'));
     } catch (Throwable $e) {
@@ -71,19 +79,16 @@ Stack trace:
 #0 %s(%d): Random\Randomizer->getInt(0, 123)
 #1 {main}
 
-Next RuntimeException: Random number generation failed in %s:%d
+-------
+
+Error: A random engine must return a non-empty string in %s:%d
 Stack trace:
-#0 %s(%d): Random\Randomizer->getInt(0, 123)
+#0 %s(%d): Random\Randomizer->nextInt()
 #1 {main}
 
 -------
 
 Error: A random engine must return a non-empty string in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->getBytes(1)
-#1 {main}
-
-Next RuntimeException: Random number generation failed in %s:%d
 Stack trace:
 #0 %s(%d): Random\Randomizer->getBytes(1)
 #1 {main}
@@ -95,19 +100,9 @@ Stack trace:
 #0 %s(%d): Random\Randomizer->shuffleArray(Array)
 #1 {main}
 
-Next RuntimeException: Random number generation failed in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->shuffleArray(Array)
-#1 {main}
-
 -------
 
 Error: A random engine must return a non-empty string in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->shuffleBytes('foobar')
-#1 {main}
-
-Next RuntimeException: Random number generation failed in %s:%d
 Stack trace:
 #0 %s(%d): Random\Randomizer->shuffleBytes('foobar')
 #1 {main}
@@ -121,10 +116,9 @@ Stack trace:
 #0 %s(%d): Random\Randomizer->getInt(0, 123)
 #1 {main}
 
-Next RuntimeException: Random number generation failed in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->getInt(0, 123)
-#1 {main}
+-------
+
+int(%d)
 
 -------
 
@@ -137,19 +131,9 @@ Stack trace:
 #0 %s(%d): Random\Randomizer->shuffleArray(Array)
 #1 {main}
 
-Next RuntimeException: Random number generation failed in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->shuffleArray(Array)
-#1 {main}
-
 -------
 
 Error: Failed to generate an acceptable random number in 50 attempts in %s:%d
-Stack trace:
-#0 %s(%d): Random\Randomizer->shuffleBytes('foobar')
-#1 {main}
-
-Next RuntimeException: Random number generation failed in %s:%d
 Stack trace:
 #0 %s(%d): Random\Randomizer->shuffleBytes('foobar')
 #1 {main}
